<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="fr.wildcodeschool.simpleui.MainActivity">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="5dp"
        android:text="@string/welcome"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkbox_wilder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/be_a_wilder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

    <EditText
        android:id="@+id/edit_firstname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/firstname"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_wilder" />

    <EditText
        android:id="@+id/edit_lastname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/lastname"
        app:layout_constraintTop_toBottomOf="@+id/edit_firstname" />

    <Button
        android:id="@+id/button_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/accept"
        app:layout_constraintTop_toBottomOf="@+id/edit_lastname" />

    <TextView
        android:id="@+id/text_congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_accept"
        tools:text="@string/congratulation" />

</android.support.constraint.ConstraintLayout>
